fix: took out the gap from .timeline because it was causing the first card to lock in low

--- a/scss/layout/_timeline.scss
+++ b/scss/layout/_timeline.scss
@@ -3,7 +3,6 @@
     background-color: #F2F0EF;
     display: flex;
     flex-direction: column;
-    gap: 10rem;
     padding-block: 5rem;
 
     &__center-divider {
